// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render \`leak\` view correctly 1`] = `
<div>
  <Connect(FavoriteFilter)
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <div
    className="projects-facets-header clearfix"
  >
    <h2
      className="h3"
    >
      filters
    </h2>
  </div>
  <QualityGateFilter
    onQueryChange={[MockFunction]}
  />
  <NewReliabilityFilter
    onQueryChange={[MockFunction]}
  />
  <NewSecurityFilter
    onQueryChange={[MockFunction]}
  />
  <SecurityReviewFilter
    className="leak-facet-box"
    onQueryChange={[MockFunction]}
    property="new_security_review"
  />
  <NewMaintainabilityFilter
    onQueryChange={[MockFunction]}
  />
  <NewCoverageFilter
    onQueryChange={[MockFunction]}
  />
  <NewDuplicationsFilter
    onQueryChange={[MockFunction]}
  />
  <NewLinesFilter
    onQueryChange={[MockFunction]}
  />
  <withLanguagesContext(LanguagesFilter)
    onQueryChange={[MockFunction]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <QualifierFilter
    onQueryChange={[MockFunction]}
  />
  <TagsFilter
    onQueryChange={[MockFunction]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
</div>
`;

exports[`should render \`leak\` view correctly with no applications 1`] = `
<div>
  <Connect(FavoriteFilter)
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <div
    className="projects-facets-header clearfix"
  >
    <h2
      className="h3"
    >
      filters
    </h2>
  </div>
  <QualityGateFilter
    onQueryChange={[MockFunction]}
  />
  <NewReliabilityFilter
    onQueryChange={[MockFunction]}
  />
  <NewSecurityFilter
    onQueryChange={[MockFunction]}
  />
  <SecurityReviewFilter
    className="leak-facet-box"
    onQueryChange={[MockFunction]}
    property="new_security_review"
  />
  <NewMaintainabilityFilter
    onQueryChange={[MockFunction]}
  />
  <NewCoverageFilter
    onQueryChange={[MockFunction]}
  />
  <NewDuplicationsFilter
    onQueryChange={[MockFunction]}
  />
  <NewLinesFilter
    onQueryChange={[MockFunction]}
  />
  <withLanguagesContext(LanguagesFilter)
    onQueryChange={[MockFunction]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <TagsFilter
    onQueryChange={[MockFunction]}
    query={
      Object {
        "view": "leak",
      }
    }
  />
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <Connect(FavoriteFilter) />
  <div
    className="projects-facets-header clearfix"
  >
    <ClearAll
      onClearAll={[MockFunction]}
    />
    <h2
      className="h3"
    >
      filters
    </h2>
  </div>
  <QualityGateFilter
    onQueryChange={[MockFunction]}
  />
  <ReliabilityFilter
    onQueryChange={[MockFunction]}
  />
  <SecurityFilter
    onQueryChange={[MockFunction]}
  />
  <SecurityReviewFilter
    onQueryChange={[MockFunction]}
  />
  <MaintainabilityFilter
    onQueryChange={[MockFunction]}
  />
  <CoverageFilter
    onQueryChange={[MockFunction]}
  />
  <DuplicationsFilter
    onQueryChange={[MockFunction]}
  />
  <SizeFilter
    onQueryChange={[MockFunction]}
    value="3"
  />
  <withLanguagesContext(LanguagesFilter)
    onQueryChange={[MockFunction]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <QualifierFilter
    onQueryChange={[MockFunction]}
  />
  <TagsFilter
    onQueryChange={[MockFunction]}
    query={
      Object {
        "size": "3",
      }
    }
  />
</div>
`;

exports[`should render correctly with no applications 1`] = `
<div>
  <Connect(FavoriteFilter) />
  <div
    className="projects-facets-header clearfix"
  >
    <ClearAll
      onClearAll={[MockFunction]}
    />
    <h2
      className="h3"
    >
      filters
    </h2>
  </div>
  <QualityGateFilter
    onQueryChange={[MockFunction]}
  />
  <ReliabilityFilter
    onQueryChange={[MockFunction]}
  />
  <SecurityFilter
    onQueryChange={[MockFunction]}
  />
  <SecurityReviewFilter
    onQueryChange={[MockFunction]}
  />
  <MaintainabilityFilter
    onQueryChange={[MockFunction]}
  />
  <CoverageFilter
    onQueryChange={[MockFunction]}
  />
  <DuplicationsFilter
    onQueryChange={[MockFunction]}
  />
  <SizeFilter
    onQueryChange={[MockFunction]}
    value="3"
  />
  <withLanguagesContext(LanguagesFilter)
    onQueryChange={[MockFunction]}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <TagsFilter
    onQueryChange={[MockFunction]}
    query={
      Object {
        "size": "3",
      }
    }
  />
</div>
`;
